Harness IO Git Sync. MODIFY: Setup/Applications/ad-capital-lab/Services/ad-capital-lab-portalOnly/Manifests/Index.yaml

--- a/Setup/Applications/ad-capital-lab/Services/ad-capital-lab-portalOnly/Manifests/Index.yaml
+++ b/Setup/Applications/ad-capital-lab/Services/ad-capital-lab-portalOnly/Manifests/Index.yaml
@@ -3,6 +3,6 @@ type: APPLICATION_MANIFEST
 gitFileConfig:
   branch: prod-adcapital
   connectorName: AppDGit
-  filePath: Rookout
+  filePath: Rookout/portal-deployment.yaml
   useBranch: true
 storeType: Remote
